Added cmake and package config files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,20 @@ set(LIBRARY_HEADER ${INCLUDE_DIR}/MotorDriver.hpp
 add_library(${PROJECT_NAME} ${LIBRARY_SOURCE} ${LIBRARY_HEADER})
 
 INSTALL(TARGETS ${PROJECT_NAME}
-	LIBRARY DESTINATION lib
-	PUBLIC_HEADER DESTINATION include)
+        RUNTIME DESTINATION bin
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+       )
 
+INSTALL(FILES ${LIBRARY_HEADER}
+        DESTINATION include/motor_driver
+        )
+
+set(PKGCONFIG_REQUIRES_PRIVATE "")
+set(PKGCONFIG_EXTRA_LINK_FLAGS "")
+set(PKGCONFIG_LINK_FLAGS_PRIVATE "")
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc.in
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc @ONLY)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION lib/pkgconfig)
