--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,9 +46,13 @@ add_library(${PROJECT_NAME} SHARED $<TARGET_OBJECTS:${PROJECT_NAME}-object>)
 
 add_library(${PROJECT_NAME}-static STATIC $<TARGET_OBJECTS:${PROJECT_NAME}-object>)
 
+# Add execuatble for a simple on/off/zero position driver test
 add_executable(MotorDriverTest ${SOURCE_DIR}/MotorDriverTest.cpp)
-
 target_link_libraries(MotorDriverTest ${PROJECT_NAME}-static ${CMAKE_THREAD_LIBS_INIT})
+
+# Add execuatble for a trajectory following test
+add_executable(MotorTrajTest ${SOURCE_DIR}/MotorDriverTrajTest.cpp)
+target_link_libraries(MotorTrajTest ${PROJECT_NAME}-static ${CMAKE_THREAD_LIBS_INIT})
 
 INSTALL(TARGETS ${PROJECT_NAME}
         RUNTIME DESTINATION bin
