Initial version of the multiple motor driver with enable, disable, and setZeroPosition functions. The current version compiles but has not yet been tested on real system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,8 +51,8 @@ add_executable(MotorDriverTest ${SOURCE_DIR}/MotorDriverTest.cpp)
 target_link_libraries(MotorDriverTest ${PROJECT_NAME}-static ${CMAKE_THREAD_LIBS_INIT})
 
 # Add execuatble for a trajectory following test
-add_executable(MotorTrajTest ${SOURCE_DIR}/MotorDriverTrajTest.cpp)
-target_link_libraries(MotorTrajTest ${PROJECT_NAME}-static ${CMAKE_THREAD_LIBS_INIT})
+# add_executable(MotorTrajTest ${SOURCE_DIR}/MotorDriverTrajTest.cpp)
+# target_link_libraries(MotorTrajTest ${PROJECT_NAME}-static ${CMAKE_THREAD_LIBS_INIT})
 
 INSTALL(TARGETS ${PROJECT_NAME}
         RUNTIME DESTINATION bin
