1. Parameters.hpp header file is missing 2. Moreover no need to include header files in cmakelist 3. Orogen component doesnt build when there is a scoped enum.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,16 +28,17 @@ set(LIBRARY_NAME ${PROJECT_NAME} CACHE INTERNAL "")
 set(LIBRARY_SOURCE ${SOURCE_DIR}/MotorDriver.cpp
 	           ${SOURCE_DIR}/CANInterface.cpp)
 
-set(LIBRARY_HEADER ${INCLUDE_DIR}/MotorDriver.hpp
-	           ${INCLUDE_DIR}/CANInterface.hpp
-		   ${INCLUDE_DIR}/CANCommand.hpp
-	           ${INCLUDE_DIR}/Parameters.hpp)
+#set(LIBRARY_HEADER ${INCLUDE_DIR}/MotorDriver.hpp
+#	           ${INCLUDE_DIR}/CANInterface.hpp
+#		   ${INCLUDE_DIR}/CANCommand.hpp
+#	           ${INCLUDE_DIR}/Parameters.hpp)
 
 # find threads - needed for header only csv parser used in this project
 find_package (Threads)
 
 # Create an Object to Make both Static and Shared Libraries in the same CMakeLists File.
-add_library(${PROJECT_NAME}-object OBJECT ${LIBRARY_SOURCE} ${LIBRARY_HEADER})
+#add_library(${PROJECT_NAME}-object OBJECT ${LIBRARY_SOURCE} ${LIBRARY_HEADER})
+add_library(${PROJECT_NAME}-object OBJECT ${LIBRARY_SOURCE})
 
 # this is only needed for older compilers but doesn't hurt either to have it
 set_target_properties(${PROJECT_NAME}-object PROPERTIES POSITION_INDEPENDENT_CODE 1)
